--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "theme": {
     "slug": "wp-rig-buddy",
-    "name": "WP Rig Buddy",
+    "name": "WP Rig Buddy"
   },
 	"export": {
 		"compress": false
